--- a/index.html
+++ b/index.html
@@ -8,9 +8,72 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div id="heading-border">
-      <h1>Code The New me</h1>
-      <h1><span>CDNM-22</span></h1>
-    </div>
+    <section id="section-1">
+      <div id="left-margin" class="">
+        <div id="heading-border">
+          <h1>Code The New me</h1>
+          <h1><span>CDNM-22</span></h1>
+          <p>
+            This is the journey of becoming the new me what I have wished for a
+            long time but couldn't do due to lots of excuses. But 2022 has to be
+            time and I have finally started the journey.
+          </p>
+        </div>
+
+        <a class="button" href="https;//google.com">Expand the Horizon</a>
+        <p>Keep in touch to know the progress</p>
+      </div>
+      <div>
+        <img src="./images/person/person-0.png" alt="Image-1" />
+      </div>
+    </section>
+    <!-- ! -->
+    <section id="section-2 ">
+      <h1>My Target in <span>2022</span></h1>
+
+      <div class="mission-1">
+        <img
+          class="illustrator"
+          src="./images/illustrators/illustrator-1.png"
+          alt="illustrator-1"
+        />
+        <h3>Mission</h3>
+
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+          dignissimos magni laborum facilis iusto nam laudantium. Iure, sequi
+          quasi nulla dolore quaerat praesentium. Odio cumque tempora autem
+          sequi recusandae molestias.
+        </p>
+      </div>
+      <div class="mission-2">
+        <img
+          class="illustrator"
+          src="./images/illustrators/illustrator-2.png"
+          alt="illustrator-2"
+        />
+        <h3>Vision</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+          dignissimos magni laborum facilis iusto nam laudantium. Iure, sequi
+          quasi nulla dolore quaerat praesentium. Odio cumque tempora autem
+          sequi recusandae molestias.
+        </p>
+      </div>
+      <div class="mission-3">
+        <img
+          class="illustrator"
+          src="./images/illustrators/illustrator-3.png"
+          alt="illustrator-3"
+        />
+        <h3>Goals</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+          dignissimos magni laborum facilis iusto nam laudantium. Iure, sequi
+          quasi nulla dolore quaerat praesentium. Odio cumque tempora autem
+          sequi recusandae molestias.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
