Section-2 is done

--- a/index.html
+++ b/index.html
@@ -29,50 +29,51 @@
     </section>
     <!-- ! -->
     <section id="section-2 ">
-      <h1>My Target in <span>2022</span></h1>
+      <h1 id="my-mission">My Target in <span>2022</span></h1>
+      <div id="Missions">
+        <div class="mission-1">
+          <img
+            class="illustrator"
+            src="./images/illustrators/illustrator-1.png"
+            alt="illustrator-1"
+          />
+          <h3>Mission</h3>
 
-      <div class="mission-1">
-        <img
-          class="illustrator"
-          src="./images/illustrators/illustrator-1.png"
-          alt="illustrator-1"
-        />
-        <h3>Mission</h3>
-
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
-          dignissimos magni laborum facilis iusto nam laudantium. Iure, sequi
-          quasi nulla dolore quaerat praesentium. Odio cumque tempora autem
-          sequi recusandae molestias.
-        </p>
-      </div>
-      <div class="mission-2">
-        <img
-          class="illustrator"
-          src="./images/illustrators/illustrator-2.png"
-          alt="illustrator-2"
-        />
-        <h3>Vision</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
-          dignissimos magni laborum facilis iusto nam laudantium. Iure, sequi
-          quasi nulla dolore quaerat praesentium. Odio cumque tempora autem
-          sequi recusandae molestias.
-        </p>
-      </div>
-      <div class="mission-3">
-        <img
-          class="illustrator"
-          src="./images/illustrators/illustrator-3.png"
-          alt="illustrator-3"
-        />
-        <h3>Goals</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
-          dignissimos magni laborum facilis iusto nam laudantium. Iure, sequi
-          quasi nulla dolore quaerat praesentium. Odio cumque tempora autem
-          sequi recusandae molestias.
-        </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+            dignissimos magni laborum facilis iusto nam laudantium. Iure, sequi
+            quasi nulla dolore quaerat praesentium. Odio cumque tempora autem
+            sequi recusandae molestias.
+          </p>
+        </div>
+        <div class="mission-2">
+          <img
+            class="illustrator"
+            src="./images/illustrators/illustrator-2.png"
+            alt="illustrator-2"
+          />
+          <h3>Vision</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+            dignissimos magni laborum facilis iusto nam laudantium. Iure, sequi
+            quasi nulla dolore quaerat praesentium. Odio cumque tempora autem
+            sequi recusandae molestias.
+          </p>
+        </div>
+        <div class="mission-3">
+          <img
+            class="illustrator"
+            src="./images/illustrators/illustrator-3.png"
+            alt="illustrator-3"
+          />
+          <h3>Goals</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+            dignissimos magni laborum facilis iusto nam laudantium. Iure, sequi
+            quasi nulla dolore quaerat praesentium. Odio cumque tempora autem
+            sequi recusandae molestias.
+          </p>
+        </div>
       </div>
     </section>
   </body>
