--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img src="./images/person/person-0.png" alt="Image-1" />
       </div>
     </section>
-    <!-- ! -->
+    <!-- !  Section-2-->
     <section id="section-2 ">
       <h1 id="my-mission">My Target in <span>2022</span></h1>
       <div id="Missions">
@@ -75,6 +75,11 @@
           </p>
         </div>
       </div>
+    </section>
+    <!-- ! Section-3-->
+    <section id="Section-3">
+
+      
     </section>
   </body>
 </html>
