--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <section id="section-1">
+    <section class="section-1">
       <div id="left-margin" class="">
         <div id="heading-border">
           <h1>Code The New me</h1>
@@ -24,7 +24,7 @@
         <p>Keep in touch to know the progress</p>
       </div>
       <div>
-        <img src="./images/person/person-0.png" alt="Image-1" />
+        <img id="img-1" src="./images/person/person-0.png" alt="Image-1" />
       </div>
     </section>
     <!-- !  Section-2-->
@@ -77,9 +77,49 @@
       </div>
     </section>
     <!-- ! Section-3-->
-    <section id="Section-3">
-
-      
+    <section id="section-3" class="section-1">
+      <div>
+        <img id="img-2" src="./images/pictures//coding.png" alt="coding" />
+      </div>
+      <div>
+        <h1>Only my Imagination is my Limit</h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis
+          blanditiis, quos nemo commodi optio illum architecto similique maiores
+          facilis labore iste placeat. Repellendus iusto cumque dolores fugit
+          eum porro deleniti!
+        </p>
+        <a class="button" href="https;//google.com"
+          >KNOW MORE ABOUT THE JOURNEY</a
+        >
+      </div>
+    </section>
+    <!-- ! Section-4-->
+    <section id="section-4" class="section-1">
+      <div>
+        <h1>Only my Imagination is my Limit</h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis
+          blanditiis, quos nemo commodi optio illum architecto similique maiores
+          facilis labore iste placeat. Repellendus iusto cumque dolores fugit
+          eum porro deleniti!
+        </p>
+        <a class="button" href="https;//google.com"
+          >KNOW MORE ABOUT THE JOURNEY</a
+        >
+      </div>
+      <div>
+        <img id="img-3" src="./images/pictures/project.png" alt="coding" />
+      </div>
+    </section>
+    <!-- !  Section-5-->
+    <section>
+      <div>
+        <h1 id="my-mission">This is just the <span>BEGINNING</span></h1>
+      </div>
+      <div>
+        
+      </div>
     </section>
   </body>
 </html>
