--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <div id="heading-border">
           <h1>Code The New me</h1>
           <h1><span>CDNM-22</span></h1>
-          <p>
-            This is the journey of becoming the new me what I have wished for a
-            long time but couldn't do due to lots of excuses. But 2022 has to be
-            time and I have finally started the journey.
-          </p>
-        </div>
+        </div>~~~~~~~~~
+        <p>
+          This is the journey of becoming the new me what I have wished for a
+          long time but couldn't do due to lots of excuses. But 2022 has to be
+          time and I have finally started the journey.
+        </p>
 
         <a class="button" href="https;//google.com">Expand the Horizon</a>
         <p>Keep in touch to know the progress</p>
@@ -113,12 +113,22 @@
       </div>
     </section>
     <!-- !  Section-5-->
-    <section>
+    <section id="section-5">
       <div>
-        <h1 id="my-mission">This is just the <span>BEGINNING</span></h1>
+        <img
+          id="img-4"
+          src="./images/pictures/keep-moving.png"
+          alt="keep moving"
+        />
       </div>
-      <div>
-        
+      <div id="final-part">
+        <h1 id="my-mission">This is just the <span>BEGINNING</span></h1>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis
+          accusantium natus quae fugiat. Quaerat optio nobis debitis nostrum
+          enim impedit vitae, ratione quae illum sit deserunt voluptatibus,
+          inventore, sequi repellat.
+        </p>
       </div>
     </section>
   </body>
