--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <div id="heading-border">
           <h1>Code The New me</h1>
           <h1><span>CDNM-22</span></h1>
-        </div>~~~~~~~~~
+        </div>
+
         <p>
           This is the journey of becoming the new me what I have wished for a
           long time but couldn't do due to lots of excuses. But 2022 has to be
@@ -112,6 +113,12 @@
         <img id="img-3" src="./images/pictures/project.png" alt="coding" />
       </div>
     </section>
+    <!-- !  Section-in-between-->
+    <section>
+      <h1 id="my-mission">
+        This is just the <span>BEGINNING of SOMETHING GOOD</span>
+      </h1>
+    </section>
     <!-- !  Section-5-->
     <section id="section-5">
       <div>
@@ -122,13 +129,14 @@
         />
       </div>
       <div id="final-part">
-        <h1 id="my-mission">This is just the <span>BEGINNING</span></h1>
+        <h1 id="my-mission">I can only get <span>BETTER</span></h1>
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis
           accusantium natus quae fugiat. Quaerat optio nobis debitis nostrum
           enim impedit vitae, ratione quae illum sit deserunt voluptatibus,
           inventore, sequi repellat.
         </p>
+        <a class="button" href="https;//google.com">MOVE FORWARD</a>
       </div>
     </section>
   </body>
