--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
         <p>
           This is the journey of becoming the new me what I have wished for a
-          long time but couldn't do due to lots of excuses. But 2022 has to be
-          time and I have finally started the journey.
+          long time but couldn't do due to lots of excuses with some ralities in
+          life. But 2022 has to be time and I have finally started the journey.
         </p>
 
         <a class="button" href="https;//google.com">Expand the Horizon</a>
@@ -41,10 +41,11 @@
           <h3>Mission</h3>
 
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
-            dignissimos magni laborum facilis iusto nam laudantium. Iure, sequi
-            quasi nulla dolore quaerat praesentium. Odio cumque tempora autem
-            sequi recusandae molestias.
+            My aim is to focus on just learning by following the guideline of
+            the course and do coding every single day even if it is for an hour
+            or to learn even the smallest thing one can learn to myself in the
+            zone of practice. I know PROBLEMS will come as it is as basic as
+            BREATHING...!!!!
           </p>
         </div>
         <div class="mission-2">
@@ -55,10 +56,11 @@
           />
           <h3>Vision</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
-            dignissimos magni laborum facilis iusto nam laudantium. Iure, sequi
-            quasi nulla dolore quaerat praesentium. Odio cumque tempora autem
-            sequi recusandae molestias.
+            All I want to see myself in a state of NOT GIVING UP..!!I am not
+            from the IT sector but I have absolutely damn passionate about it. I
+            don't understand so many things easily & it's completely fine. Thats
+            why I always have to put more effort to understand things. So, I
+            won't stop until I understand...
           </p>
         </div>
         <div class="mission-3">
@@ -69,10 +71,11 @@
           />
           <h3>Goals</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
-            dignissimos magni laborum facilis iusto nam laudantium. Iure, sequi
-            quasi nulla dolore quaerat praesentium. Odio cumque tempora autem
-            sequi recusandae molestias.
+            The goal is to be confident in myself as a new coder go for jub
+            hunting in 2023 which will be the greatest transition in my life. I
+            know it won't be easy but life never was..!! So, I am not looking
+            for an easy escape rather I want to prepare myself as much I can
+            learn and express the potential I have.
           </p>
         </div>
       </div>
@@ -85,10 +88,10 @@
       <div>
         <h1>Only my Imagination is my Limit</h1>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis
-          blanditiis, quos nemo commodi optio illum architecto similique maiores
-          facilis labore iste placeat. Repellendus iusto cumque dolores fugit
-          eum porro deleniti!
+          Being self-confident, focused and motivated is not the easiest of our
+          abilities. And I want remind myself that it is hard but I should focus
+          more on the journey than the destination. Nothing can be more
+          dangerous than having low self-esteem.
         </p>
         <a class="button" href="https;//google.com"
           >KNOW MORE ABOUT THE JOURNEY</a
@@ -98,16 +101,13 @@
     <!-- ! Section-4-->
     <section id="section-4" class="section-1">
       <div>
-        <h1>Only my Imagination is my Limit</h1>
+        <h1>Not just learn, share the knowledge</h1>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis
-          blanditiis, quos nemo commodi optio illum architecto similique maiores
-          facilis labore iste placeat. Repellendus iusto cumque dolores fugit
-          eum porro deleniti!
+          Sharing the knowledge with others is the best way to learn. Noting ca
+          be better than this in terms of creating an environment of passive
+          learning where anyone can join and expand the horizons or creativity.
         </p>
-        <a class="button" href="https;//google.com"
-          >KNOW MORE ABOUT THE JOURNEY</a
-        >
+        <a class="button" href="https;//google.com">LET'S LEARN TOGETHER</a>
       </div>
       <div>
         <img id="img-3" src="./images/pictures/project.png" alt="coding" />
@@ -128,16 +128,26 @@
           alt="keep moving"
         />
       </div>
-      <div id="final-part">
+      <div id="section-5-body">
         <h1 id="my-mission">I can only get <span>BETTER</span></h1>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis
-          accusantium natus quae fugiat. Quaerat optio nobis debitis nostrum
-          enim impedit vitae, ratione quae illum sit deserunt voluptatibus,
-          inventore, sequi repellat.
+          Where this journey will take me? I don't know yet. But will it take be
+          back where I never wanted to be? I don't believe so. These is only one
+          possibility I have: I can only get better....!!! So let's MOVE
+          FORWARD....
         </p>
         <a class="button" href="https;//google.com">MOVE FORWARD</a>
       </div>
     </section>
+    <!-- ! Footer-->
+    <footer>
+      <h2 class="white-text">
+        Mission <span id="footer-text"> CDNM-2022 </span>
+      </h2>
+      <p class="white-text">
+        I know I will fall, but I wann make sure I stand up every single
+        time........
+      </p>
+    </footer>
   </body>
 </html>
